# rich-click

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .rich-codex.yml  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  Untitled.ipynb  docs-requirements.txt  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  sitemap.xml  tox.ini  versions.json
.github/workflows/: build-docs.yml  deploy-pypi.yml  lint.yml  pre-commit.yml  pytest.yml  rich-codex.yml  scheduled-tests.yml  test-examples.yml
1.8/: 404.html  _deploy.py  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  sitemap.xml
1.8/blog/: index.html
1.8/changelog/: index.html
1.8/contributing/: index.html
1.8/editor/: index.html
1.8/overrides/: main.html
1.8/search/: search_index.json
1.9/: 404.html  changelog.html  contributing.html  editor.html  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  live_style_editor.py  sitemap.xml
1.9/blog/: index.html
1.9/changelog/: index.html
1.9/contributing/: index.html
1.9/css/: editor.css
1.9/documentation/: accessibility.html  comparison_of_click_and_rich_click.html  configuration.html  formatting_and_styles.html  groups_and_sorting.html  introduction_to_click.html  rich_click_cli.html
1.9/editor/: index.html
1.9/search/: search_index.json
blog/: index.html
changelog/: index.html
code_snippets/accessibility/: colors.py
code_snippets/introduction_to_click/: hello_rich.py
code_snippets/rich_click_cli/: app.py
contributing/: index.html
css/: extra.css
docs/: _deploy.py  changelog.md  contributing.md  editor.md  getting-started.md  index.md  live_style_editor.md  live_style_editor.py  rich_click_cli.md
docs/blog/: .authors.yml  index.md
docs/css/: editor.css  extra.css  termynal.css
docs/docs/: index.md  introduction_to_click.md
docs/documentation/: accessibility.md  comparison_of_click_and_rich_click.md  configuration.md  custom_styles.md  examples.md  formatting_and_styles.md  groups_and_sorting.md  introduction_to_click.md  machine_readable_help.md  panels.md  rich_click_cli.md  structure.md  text_formatting.md  text_markup_and_formatting.md  themes.md  typer_support.md
docs/js/: custom.js  termynal.js
docs/overrides/: editor.html
docs/stylesheets/: extra.css
documentation/accessibility/: index.html
documentation/comparison_of_click_and_rich_click/: index.html
documentation/configuration/: index.html
documentation/formatting_and_styles/: index.html
documentation/groups_and_sorting/: index.html
documentation/introduction_to_click/: index.html
documentation/rich_click_cli/: index.html
editor/: index.html
examples/: 01_simple.py  01_simple_monkeypatch.py  02_declarative.py  02_simple_declarative.py  03_groups_sorting.py  03_simple_importas.py  04_arguments.py  04_rich_markup.py  05_arguments.py  06_arguments.py  07_custom_errors.py  08_echo.py  08_metavars_default.py  08_typer.py  09_echo_via_pager.py  09_envvar.py  09_typer.py  10_echo_markdown.py  11_echo_via_pager_markdown.py  11_hello.py  12_prompt.py  12_theme_simple.py  13_async.py  13_tree.py  14_tree_option.py
examples/click/: 01_simple.py  03_groups_sorting.py  04_rich_markup.py  05_markdown.py  07_custom_errors.py  08_metavars.py  09_echo.py  09_envvar.py  10_echo_via_pager.py  10_table_styles.py  11_echo_markdown.py  12_echo_via_pager_markdown.py
examples/typer/: 01_simple.py  02_subcommands.py  03_envvar.py  04_args.py
fonts/: LICENSE
search/: search_index.json
src/rich_click/: __init__.py  __main__.py  _click_types_cache.py  _compat_click.py  _compat_typer.py  _internal_types.py  cli.py  core.py  decorators.py  decorators.pyi  help_json.py  patch.py  rich_async_command.py  rich_box.py  rich_click.py  rich_click_theme.py  rich_command.py  rich_command.pyi  rich_context.py  rich_echo.py  rich_group.py  rich_help_configuration.py  rich_help_formatter.py  rich_help_rendering.py  rich_markup.py  rich_mixin.py  rich_option.py  rich_panel.py  rich_parameter.py  rich_parameters.py  rich_theme.py  tree_command.py  tree_help_rendering.py  typer.py  utils.py
tests/: __init__.py  conftest.py  test_asyncclick.py  test_config.py  test_deprecations.py  test_exit_code.py  test_help.py  test_help_json.py  test_misc.py  test_no_rich_imports.py  test_rich_click_cli.py  test_themes.py  test_types.py
tests/expectations/: test_rich_click[no args is help]-click7.out  test_rich_click[no args is help]-click8.config.json  test_rich_click[no args is help]-click8.out  test_rich_click[test arguments with rich_config]-click7.config.json  test_rich_click[test arguments with rich_config]-click7.out  test_rich_click[test arguments with rich_config]-click8.config.json  test_rich_click[test arguments with rich_config]-click8.out  test_rich_click[test arguments with rich_config].out  test_rich_click[test arguments]-click7.config.json  test_rich_click[test arguments]-click8.config.json  test_rich_click[test arguments].config.json  test_rich_click[test arguments].out  test_rich_click[test command column alignment]-click7.config.json  test_rich_click[test command column alignment]-click7.out  test_rich_click[test command column alignment]-click8.config.json  test_rich_click[test command column alignment]-click8.out  test_rich_click[test context_settings]-click7.config.json  test_rich_click[test context_settings]-click7.out  test_rich_click[test context_settings]-click8.config.json  test_rich_click[test context_settings]-click8.out  test_rich_click[test custom errors help]-click7.config.json  test_rich_click[test custom errors help]-click7.out  test_rich_click[test custom errors help]-click8.config.json  test_rich_click[test custom errors help]-click8.out  test_rich_click[test custom errors help].config.json  test_rich_click[test custom errors help].out  test_rich_click[test custom errors with rich_config]-click7.config.json  test_rich_click[test declarative].out  (+85 more)
(+189 files in other folders)
