[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=45",
]

[project]
name = "rich-click"
description = "Format click help output nicely with rich"
readme = "README.md"
license = { file = "LICENSE" }
maintainers = [
    { name = "Phil Ewels", email = "phil@ewels.co.uk" },
    { name = "Daniel Reeves", email = "xdanielreeves@gmail.com" },
]
authors = [ { name = "Phil Ewels", email = "phil@ewels.co.uk" } ]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = [
    "version",
]
dependencies = [
    "click>=8",
    "colorama; platform_system=='Windows'",
    "rich>=12",
    "typing-extensions>=4; python_version<'3.11'",
]
optional-dependencies.dev = [
    "inline-snapshot>=0.24",
    "jsonschema>=4",                     # for --resolution=lowest support
    "mypy>=1.14.1",
    "nodeenv>=1.9.1",                    # for --resolution=lowest support
    "packaging>=25",
    "pre-commit>=3.5",
    "pytest>=8.3.5",
    "pytest-cov>=5",
    "rich-codex>=1.2.11",
    "ruff>=0.12.4",
    "typer>=0.15",
    "types-setuptools>=75.8.0.20250110",
]
optional-dependencies.docs = [
    "markdown-include>=0.8.1",
    "mike>=2.1.3",
    "mkdocs[docs]>=1.6.1",
    "mkdocs-github-admonitions-plugin>=0.1.1",
    "mkdocs-glightbox>=0.4",
    "mkdocs-include-markdown-plugin>=7.1.7; python_version>='3.9'",
    "mkdocs-material[imaging]~=9.5.18",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocs-redirects>=1.2.2",
    "mkdocs-rss-plugin>=1.15",
    "mkdocstrings[python]>=0.26.1",
    "rich-codex>=1.2.11",
    "typer>=0.15",
]
urls.Documentation = "https://github.com/ewels/rich-click"
urls.Homepage = "https://github.com/ewels/rich-click"
urls.Issues = "https://github.com/ewels/rich-click/issues"
urls.Repository = "https://github.com/ewels/rich-click"
scripts.rich-click = "rich_click.cli:main"

[tool.setuptools.dynamic]
version = { attr = "rich_click.__version__" }

[tool.black]
line-length = 120
target-version = [ 'py37' ]

[tool.ruff]
line-length = 120
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "docs/",
    "examples/**",
    "sdist",
    "tests/fixtures/**",
    "venv",
]

lint.select = [
    "D",    # pydocstyle
    "E",    # pycodestyle
    "F",    # flake8
    "I001", # isort
    "W",    # pycodestyle
]
lint.ignore = [
    "D100", # Missing docstring in public module
    "D102", # Missing docstring in public method
    "D105", # Missing docstring in magic method
    "D203", # 1 blank line required before class docstring
    "D205", # 1 blank line required between summary line and description
    "D212", # Multi-line docstring summary should start at the first line
    "E731", # Do not assign a lambda expression, use a def
]
lint.per-file-ignores."tests/**/*.py" = [
    "D",
]

lint.isort.known-first-party = [ "rich_click" ]
lint.isort.lines-after-imports = 2

[tool.pyproject-fmt]
indent = 4

[tool.pytest.ini_options]
addopts = "-s -rP -v --showlocals --cov --cov-report term"
pythonpath = [ "tests", "src" ]
testpaths = [ "tests" ]

[tool.mypy]
python_version = "3.10"
scripts_are_modules = true
strict = true
follow_imports = "normal"
exclude = [
    '.*?live_style_editor\.py$',
]

[tool.pyright]
include = [ "src" ]
pythonVersion = "3.8"
typeCheckingMode = "basic"
executionEnvironments = [
    { root = "src" },
    { root = "tests", extra_paths = [
        "src",
    ] },
]

[tool.inline-snapshot]
hash-length = 15
default-flags = [ "report" ]
default-flags-tui = [ "create", "review" ]
format-command = "ruff format --stdin-filename {filename}"
