[metadata]
name = rich-click
version = attr: rich_click.__version__
url = https://github.com/ewels/rich-click
project_urls =
    Documentation = https://github.com/ewels/rich-click
    Source Code = https://github.com/ewels/rich-click
    Issue Tracker = https://github.com/ewels/rich-click/issues/
license = MIT
license_files = LICENSE
author = Phil Ewels
author_email = phil@ewels.co.uk
maintainer = Phil Ewels
maintainer_email = phil@ewels.co.uk
description = Format click help output nicely with rich
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python

[options]
packages = find:
package_dir =
    =src
include_package_data = True
python_requires = >= 3.7

[options.entry_points]
console_scripts =
    rich-click = rich_click.cli:main

[options.packages.find]
where = src

# Dependencies are in setup.py for GitHub's dependency graph.
